--- a/RestoreChromeExtension/manifest.json
+++ b/RestoreChromeExtension/manifest.json
@@ -1,6 +1,24 @@
   {
-    name:"RestorePlus",
-    version:"1.0",
-    description:"Make restore365 suck less",
-    manifest_version:1
+    "name": "RestorePlus",
+    "version": "1.1",
+    "description": "Make it suck less",
+    "background": {
+      "scripts": ["background.js"],
+      "persistent": false
+    },
+    "manifest_version": 2,
+    "author": "Colten Nye",
+
+    "web_accessible_resources": ["attachFilterListeners.js"],
+    "content_scripts":
+    [{
+        "matches":
+        [
+          "https://restore365.net/Enterprise/Module/*"
+        ],
+        "js":
+        [
+          "injector.js"
+        ]
+    }]
   }
